Fix button alignment by adding flex column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,17 @@ body{
     max-width: 80vw;
     margin: 0 auto;
     padding: 2rem;
+    gap: 1.5rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
 }
 
 /*  =============
@@ -175,13 +186,14 @@ body{
     font-size: 2rem;
     font-family: var(--ff-sec);
     padding: 1rem;
-    width: 30rem;
+    width: 15rem;
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
     color: var(--clr-sec);
     background: var(--background-sec);
     border-radius: 4px;
+    margin-top: 1rem;
 }
 
 .btn:hover {
